@@ -7,6 +7,7 @@ description = 'Usage examples for inference4j'
 application {
     mainClass = providers.gradleProperty('mainClass')
             .orElse('io.github.inference4j.examples.SemanticSimilarityExample')
+    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
 }
 
 tasks.named('run') {
